# edgepacer

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  DATA.md  Dockerfile  LICENSE  LICENSE-3rdparty.csv  NOTICE  README.md  SECURITY.md  build-all.sh  build.rs  deny.toml  license-tool.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  promote.yml  release.yml
bpf/: Cargo.toml  deny.toml  rust-toolchain.toml
bpf-common/: Cargo.toml
bpf-common/src/: lib.rs
bpf/.cargo/: config.toml
bpf/src/: main.rs
charts/edgepacer/: Chart.yaml  README.md  values.yaml
charts/edgepacer/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  daemonset.yaml  networkpolicy.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml
crates/logpacer_wire/: Cargo.toml  README.md  build.rs
crates/logpacer_wire/proto/: logpacer_wire.proto
crates/logpacer_wire/src/: lib.rs
docs/: windows-support-gaps.md
docs/kubernetes/: daemonset-install.md  local-validation.md
docs/plans/: ebpf-cgroup-scoping-plan.md
scripts/: ci.sh  container-image.sh  regen-bpf-object.sh  release-package.sh  test-ebpf-no-ptrace.sh  test-ebpf-private-cgroupns.sh  test-ebpf-systemd-cgroup.sh  third-party-licenses.sh
scripts/ci/: verify-cross-runner.sh
scripts/kubernetes/: test-ebpf-chart.sh  validate-kind.sh  validate-lima-k3s.sh
src/: agent.rs  auth_session.rs  batch_tracker.rs  bootstrap.rs  buffer.rs  checkpoint.rs  common.rs  config.rs  container_reader.rs  counters.rs  cri.rs  delivery.rs  docker_stream.rs  entry_assembler.rs  error_collector.rs  host_metrics.rs  host_metrics_darwin.rs  host_metrics_linux.rs  host_metrics_windows.rs  identity.rs  importer.rs  journald_stream.rs  legacy_migration.rs  lib.rs  main.rs  metrics_pipeline.rs  metrics_shipper.rs  orchestrator.rs  overflow.rs  pipeline.rs  rate_limiter.rs  retry.rs  runtime.rs  sampler.rs  self_telemetry.rs  sender.rs  shipper.rs  sqlite_sequence_buffer.rs  stats.rs  streaming_actor.rs  (+14 more)
src/config/: app.rs  buffer.rs  cadence.rs  ebpf.rs  fields.rs  logs.rs  metrics.rs  services.rs  streaming.rs  telemetry.rs  trace_proxy.rs
src/discovery/: cache.rs  cri.rs  docker.rs  event_log.rs  files.rs  kubernetes.rs  mod.rs  packages.rs  ports.rs  processes.rs  systemd.rs  windows_services.rs
src/ebpf/: capability.rs  capture.rs  cgroup_resolver.rs  cgroup_v2.rs  listener_snapshot.rs  listener_state.rs  manager.rs  mod.rs  pid_resolver.rs  runner.rs  sock_diag.rs  socket_port.rs  systemd_resolver.rs  tls_libs.rs
src/ebpf/capture/: tests.rs
src/ebpf/l7/: amqp.rs  amqp1.rs  cassandra.rs  clickhouse.rs  conn.rs  dns.rs  edge.rs  exports_demo.rs  http1.rs  http2.rs  kafka.rs  memcached.rs  mod.rs  mongodb.rs  mqtt.rs  mysql.rs  nats.rs  postgres.rs  pulsar.rs  red.rs  redis.rs  smtp.rs  span.rs  tds.rs
src/journal/: fallback.rs  mod.rs  native.rs  unit.rs
src/manager/: auth.rs  main.rs  mod.rs  process.rs  supervisor.rs  updater.rs  windows_service.rs
src/tailer/: line.rs  state.rs
test/tools/: loggen.rs  mock_logrelay.rs  wire_gzip_bench.rs
tests/: e2e_logrelay.rs  golden_contract.rs  live_relay_smoke.rs  multiline_integration.rs  parity_harness.rs  pipeline_integration.rs  ship_integration.rs  tailer_rotation.rs
tests/common/: mod.rs
tests/fixtures/: matcher_parity.json  unified_config_golden.json
