[package]
name = "logpacer_wire"
version = "0.1.0"
edition = "2024"
description = "Vendored LogPacer wire format used by EdgePacer"
license = "Apache-2.0"
publish = false

[dependencies]
prost = "0.14"

[build-dependencies]
prost-build = "0.13"
# Vendors a known protoc version (built from source at build time) so the
# build doesn't depend on whatever protoc the host / cross-compile container
# happens to ship. cross's default Ubuntu images carry protoc < 3.15 which
# doesn't support proto3 `optional` fields.
protobuf-src = "2"
